.workshop/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spawner
  annotations:
    homeroom/title: "Kubernetes Fundamentals"
    homeroom/description: "A workshop introducing developers to Kubernetes"
spec:
  rules:
  - http:
      paths:
      - host: "lab-k8s-fundamentals.${CLUSTER_SUBDOMAIN}"
        path: "/"
        backend:
          serviceName: spawner
          servicePort: 8080
